--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,9 @@
 }
 
 @media (max-width: 600px) {
+    #name-container{
+        margin-top: -5px
+    }
     #icon-container {
         margin-top: 100px;
         display: grid;
